[package]
name = "knock-on-gpus"
authors = ["TrpFrog"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
colored = { version = "2.1.0", features = [] }
env_logger = "0.11.2"
log = "0.4.20"
nvml-wrapper = "0.10.0"
